--- a/views/login.pug
+++ b/views/login.pug
@@ -7,10 +7,10 @@ block content
       form.form
         .form__group
           label.form__label(for='email') Email address
-          input#email.form__input(type='email', placeholder='you@example.com', required)
+          input#email.form__input(type='email', placeholder='you@example.com',value='cookie@example.com', required)
         .form__group.ma-bt-md
           label.form__label(for='password') Password
-          input#password.form__input(type='password', placeholder='••••••••', required, minlength='8')
+          input#password.form__input(type='password', placeholder='••••••••', required, minlength='8', value='test1234')
           a(href="/forgotPassword", rel="noopener noreferrer") 
         .form__group
           button.btn.btn--green Login
